authelia/authelia-service.yml
apiVersion: v1
kind: Service
metadata:
  name: authelia-service
  namespace: lldap
spec:
  selector:
    app: authelia
  ports:
  - name: http
    port: 9091
    targetPort: 9091
