authelia/authelia-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authelia-ingress
  namespace: auth
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/name: authelia
spec:
  ingressClassName: traefik
  rules:
  - host: auth.picklemustard.dev
    http:
      paths:
      - path: /authelia
        pathType: Prefix
        backend:
          service:
            name: authelia-service
            port:
              number: 9091
